--- a/doctor-service/pom.xml
+++ b/doctor-service/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		    <version>2.3.2.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
